objects/SGR_Opportunity_Plan_Rate__c.object
<CustomObject>
    <description>This object contains details about opportunity plan Rates.</description>
    <fields>
        <fullName>ACA_Fee__c</fullName>
        <label>ACA Fee</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acc_Plan_External_Id__c</fullName>
        <label>Acc Plan External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Plan Rates</relationshipLabel>
        <relationshipName>Opportunity_Plan_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_Rate_Table__c</fullName>
        <formula>IF((ISPICKVAL(Coverage_Type__c, &quot;H&quot;)) || (ISPICKVAL(Coverage_Type__c, &quot;D&quot;)),HYPERLINK(&quot;/one/one.app#/sObject/00O4D000000KyXb?fv0=&quot;&amp;Plan__c&amp;&quot;&amp;fv1=&quot;&amp;CASE(Opportunity__r.Account_Market_Segment__c,&apos;SG&apos;,&apos;SG&apos;,&apos; &apos;)&amp; 
&quot;&amp;fv2=&quot;&amp;CASE(Opportunity__r.HCSC_Division__c,&apos;IL&apos;,&apos;IL&apos;,&apos;NM&apos;,&apos;NM&apos;,&apos;TX&apos;,&apos;TX&apos;,&apos;MT&apos;,&apos;MT&apos;,&apos;OK&apos;,&apos;OK&apos;,&apos; &apos;)&amp;&quot;&amp;fv3=&quot;&amp;Opportunity__r.FIPS_Code__c&amp;&quot;&amp;fv4=&quot;&amp;TEXT(Opportunity__r.Rate_Effective_Date__c),&quot;Age Rate Health&quot;,&apos;_blank&apos;),HYPERLINK(&quot;/one/one.app#/sObject/00O4D000000Kyi5?fv0=&quot;&amp;Id,&quot;Age Rate&quot;,&apos;_blank&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Rate Table</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Cancel_Date__c</fullName>
        <label>Benefit Agreement Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Effective_Date__c</fullName>
        <label>Benefit Agreement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_End_Date__c</fullName>
        <label>Benefit Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Number__c</fullName>
        <label>Benefit Agreement Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Renewal_Date__c</fullName>
        <label>Benefit Agreement Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Agreement</label>
        <referenceTo>Benefit_Agreement__c</referenceTo>
        <relationshipLabel>Opportunity Plan Rates</relationshipLabel>
        <relationshipName>Opportunity_Plan_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancel_Code__c</fullName>
        <label>Cancel Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canceled_Date_Copy__c</fullName>
        <description>Created for Audit Purposes only</description>
        <label>Canceled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CensusComposite__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Opportunity__r.HCSC_Division__c ,&apos;NM&apos;)), HYPERLINK(&quot;/one/one.app#/sObject/00O4D000000Kzby?fv0=&quot;&amp;CASESAFEID(Id) ,&quot;Census Composite Rate&quot;), &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Census Composite Rates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Census_Age_Rate__c</fullName>
        <formula>HYPERLINK(&quot;/one/one.app#/sObject/00O4D000000Kzav?fv0=&quot;&amp;CASESAFEID(Id),&quot;Census Age Rate&quot;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Census Age Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Product_Name__c</fullName>
        <label>Corporate Product Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Product_Number__c</fullName>
        <label>Corporate Product Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>HDL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Age_Total_Est_Tax_and_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Age Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Age_Total_Monthly_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Age Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Comp_Total_Est_Tax_and_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Comp Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Comp_Total_Monthly_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Comp Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EC_Enrolled_Subscriber_Count__c</fullName>
        <label>EC Enrolled Subscriber Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EF_Enrolled_Subscriber_Count__c</fullName>
        <label>EF Enrolled Subscriber Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EO_Enrolled_Subscriber_Count__c</fullName>
        <label>EO Enrolled Subscriber Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Enrolled_Subscriber_Count__c</fullName>
        <label>ES Enrolled Subscriber Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolled_Member_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Enrolled Member Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolled_Subscriber_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Enrolled Subscriber Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section_Cancel_Date__c</fullName>
        <label>Group Section Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Section_Number__c</fullName>
        <label>Group Section Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section_Original_Effective_Date__c</fullName>
        <label>Group Section Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Section_Renewal_Date__c</fullName>
        <label>Group Section Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Section</label>
        <referenceTo>SGR_Opportunity_Group_Section__c</referenceTo>
        <relationshipLabel>Opportunity Plan Rates</relationshipLabel>
        <relationshipName>Opportunity_Plan_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Health_Rating_Area_Number__c</fullName>
        <label>Health Rating Area Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitro_TX_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invitro (TX only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_HSA__c</fullName>
        <description>Is HSA referenced from Plan</description>
        <formula>Plan__r.Is_HSA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is HSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapping_From_Plan_Id__c</fullName>
        <label>Mapping From Plan Id</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_ID__c</fullName>
        <label>Marketing Plan ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Sales_Plan_ID__c</fullName>
        <formula>Marketing_Plan_ID__c &amp; &apos;/&apos; &amp;  Sales_Plan_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing/Sales Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maternity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maternity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Policy_Tier__c</fullName>
        <label>Member Policy Tier</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Premium__c</fullName>
        <label>Member Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_Rates_or_Composite_Rates__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Opportunity__r.HCSC_Division__c ,&apos;NM&apos;)), HYPERLINK(&quot;/one/one.app#/sObject/00O4D000000L097?fv0=&quot;&amp;CASESAFEID(Id) ,&quot;Composite Rate&quot;), &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite Rates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Benefit_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Benefit Agreement</label>
        <referenceTo>SGR_Opportunity_Benefit_Agreement__c</referenceTo>
        <relationshipLabel>Opportunity Plan Rates</relationshipLabel>
        <relationshipName>Opportunity_Plan_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan_Rate_Number__c</fullName>
        <displayFormat>OPR-{0000}</displayFormat>
        <label>Opportunity Plan Rate Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Plan Rates</relationshipLabel>
        <relationshipName>Opportunity_Plan_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt2_Plan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Plan Option 2</description>
        <label>Opt2 Plan Id</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Opportunity Plan Rates (Opt2 Plan Id)</relationshipLabel>
        <relationshipName>Opportunity_Plan_Rates_Opt2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Age_Total_Est_Tax_and_Fees__c</fullName>
        <label>Opt2 Renw Age Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Age_Total_Monthly_Premium__c</fullName>
        <label>Opt2 Renw Age Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Comp_Total_Est_Tax_and_Fees__c</fullName>
        <label>Opt2 Renw Comp Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Comp_Total_Monthly_Premium__c</fullName>
        <label>Opt2 Renw Comp Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Plan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Plan Option 3</description>
        <label>Opt3 Plan Id</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Opportunity Plan Rates (Opt3 Plan Id)</relationshipLabel>
        <relationshipName>Opportunity_Plan_Rates_Opt3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Age_Total_Est_Tax_and_Fees__c</fullName>
        <label>Opt3 Renw Age Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Age_Total_Monthly_Premium__c</fullName>
        <label>Opt3 Renw Age Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Comp_Total_Est_Tax_and_Fees__c</fullName>
        <label>Opt3 Renw Comp Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Comp_Total_Monthly_Premium__c</fullName>
        <label>Opt3 Renw Comp Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewing</fullName>
                </value>
                <value>
                    <fullName>Mapped</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <formula>BLANKVALUE(Plan__r.Network__c, &apos;PPO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Opportunity Plan Rates</relationshipLabel>
        <relationshipName>Opportunity_Plan_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prototype_Canceled_Date__c</fullName>
        <formula>Group_Section__r.Benefit_Agreement_Cancel_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canceled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prototype_Current_Mo_Premium__c</fullName>
        <formula>0.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mo. Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prototype_Mapped_From__c</fullName>
        <formula>IF(  ISPICKVAL(Plan_Status__c , &quot;Mapped&quot;) , Group_Section__r.Benefit_Agreement__r.Plan1__r.Mapped_Plan_Name__c
,&quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mapped From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prototype_Plan_Indicated__c</fullName>
        <label>Plan Indicated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indicated</fullName>
                    <default>true</default>
                    <label>Indicated</label>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prototype_Plan_Level__c</fullName>
        <label>Plan Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prototype_Project_Mo_Premium__c</fullName>
        <formula>0.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Mo. Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prototype_of_Subscribers__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Effective_Date__c</fullName>
        <label>Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Effective__c</fullName>
        <formula>TEXT(YEAR(Rate_Effective_Date__c)/MONTH(Rate_Effective_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate_Effective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Size_Code__c</fullName>
        <label>Rate Size Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type_Code__c</fullName>
        <description>STN or AGE for standard rate and age rate</description>
        <label>Rate Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renw_Age_Total_Est_Tax_and_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Renw Age Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Age_Total_Monthly_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Renw Age Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Comp_Total_Est_Tax_and_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Renw Comp Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Comp_Total_Monthly_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Renw Comp Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SGR_Include_BA_Plan_Rate__c</fullName>
        <formula>Opportunity_Benefit_Agreement__r.Include_BA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include BA Plan Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Plan_ID__c</fullName>
        <label>Sales Plan ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharingRecordAccessUpdate__c</fullName>
        <label>SharingRecordAccessUpdate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_Date_Copy__c</fullName>
        <description>Created for Audit Purposes only</description>
        <label>Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_Date__c</fullName>
        <formula>Group_Section__r.BEN_AGMT_renewal_date__c</formula>
        <label>Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_plan__c</fullName>
        <formula>HYPERLINK( &quot;/apex/Testcensus?id=&quot; +  Id , &quot;Title for the Hyperlink&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Agreement_Sequence_Number__c</fullName>
        <label>Tier Agreement Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Number__c</fullName>
        <label>Tier Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Cancelled_Date__c</fullName>
        <label>Track Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
                <value>
                    <fullName>Alternative</fullName>
                    <isActive>false</isActive>
                    <label>Alternative</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Plan Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Acc_Plan_External_Id__c</columns>
        <columns>Age_Rate_Table__c</columns>
        <columns>Census_Age_Rate__c</columns>
        <columns>Benefit_Agreement_Effective_Date__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Group_Section_Number__c</columns>
        <columns>Group_Section_Renewal_Date__c</columns>
        <columns>Plan__c</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Sales_Plan_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Test_plan__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Plan_Name__c</field>
            <operation>contains</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Plan Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Plan Rates</pluralLabel>
    <recordTypes>
        <fullName>SGR_Opportunity_Plan_Rate</fullName>
        <active>true</active>
        <description>SGR Opportunity Plan Rate Record Type</description>
        <label>SGR Opportunity Plan Rate</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>